<resources>
    <string name="app_name">国防动员</string>

    <string name="app_tips">系统提示</string>
    <string name="app_confirm">确定</string>
    <string name="app_cancel">取消</string>
    <string name="app_exit">退出</string>
    <string name="app_edit">编辑</string>
    <string name="app_choose">请选择</string>
    <string name="app_data_none">没有相关数据</string>

    <string name="launch_check_tips">正在检查设备环境</string>

    <string name="login_secure">安全连接已建立</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_login">登录</string>
    <string name="login_username_empty">请输入用户名</string>
    <string name="login_password_empty">请输入密码</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="title_register">注册</string>
    <string name="register_username_hint">6&#8211;20位英文或数字</string>
    <string name="register_password_hint">6&#8211;12位英文或数字</string>
    <string name="register_password_confirm">请再次输入密码</string>
    <string name="register_full_name">姓名</string>
    <string name="register_id_card">身份证</string>

    <string name="main_tab_news">资讯</string>
    <string name="main_tab_trains">训练评测</string>
    <string name="main_tab_chat">联络通讯</string>
    <string name="main_tab_assess">政治学习</string>
    <string name="main_tab_me">我</string>

    <string name="me_logout">退出登录</string>
    <string name="me_secure_tips">安全连接已建立，由NextCont提供技术支持。</string>

    <string name="title_check_in">打卡</string>
    <string name="check_in_record">查看打卡记录</string>
    <string name="check_in_allow_tips">您当前处于打卡区域内</string>
    <string name="check_in_success">打卡成功</string>
    <string name="check_in_expired">今日已打卡</string>

    <string name="title_check_in_record">打卡记录</string>

    <string name="title_notice">通知公告</string>

    <string name="title_feedback">问题反馈</string>

    <string name="title_contact_us">联系我们</string>

    <string name="title_about">关于</string>


    <!-- 聊天 -->
    <string name="contact_name_unknown">不明人士</string>

    <string name="time_display_just_now">刚刚</string>
    <string name="time_display_minute_ago">分钟前</string>
    <string name="time_display_hour_ago">小时前</string>
    <string name="time_display_day_ago">天前</string>
    <string name="time_display_long_time_age">很久以前</string>

    <string name="message_media_type_image">[图片]</string>
    <string name="message_media_type_video">[视频]</string>
    <string name="message_media_type_voice">[语音]</string>

    <string name="title_activity_preview">预览</string>
    <string name="activity_preview_video_failed">加载视频失败，视频可能仍在处理中，请稍后再尝试。</string>
    <string name="activity_preview_image_saved">已保存至本地相册</string>

    <string name="activity_frame_item_conversation">最近会话</string>
    <string name="activity_frame_item_favorite">收藏</string>
    <string name="activity_frame_item_archive">归档</string>
    <string name="activity_frame_item_contact">联系人</string>
    <string name="activity_frame_item_invitation">会话邀请</string>
    <string name="activity_frame_create_conversation">创建会话</string>
    <string name="activity_frame_create_group_conversation">创建群组</string>

    <string name="fragment_conversation_search_tint">搜索会话</string>
    <string name="fragment_conversation_archive">归档</string>
    <string name="fragment_conversation_archive_cancel">取消归档</string>
    <string name="fragment_conversation_favorite">收藏</string>
    <string name="fragment_conversation_favorite_cancel">取消收藏</string>
    <string name="fragment_conversation_none_inbox">没有任何会话</string>
    <string name="fragment_conversation_none_favorite">未收藏任何会话</string>
    <string name="fragment_conversation_none_archive">未归档任何会话</string>
    <string name="fragment_conversation_sync_inbox">正在同步，该过程较为耗时，请耐心等待。</string>
    <string name="fragment_conversation_sync_favorite">正在加载</string>
    <string name="fragment_conversation_sync_archive">正在同步</string>
    <string name="fragment_conversation_favorite_success">收藏成功</string>

    <string name="title_activity_chat">对话</string>
    <string name="activity_chat_input_hint">输入文字内容&#8230;</string>
    <string name="activity_chat_recording_hold_speak">按住 说话</string>
    <string name="activity_chat_recording_release_speak">松开 结束</string>
    <string name="activity_chat_recording_slide_cancel">手指上滑，取消发送</string>
    <string name="activity_chat_recording_lose_cancel">松开手指，取消发送</string>
    <string name="activity_chat_recording_alert">!</string>
    <string name="activity_chat_click_play">点击播放</string>
    <string name="activity_chat_exit">您已退出该会话</string>
    <string name="activity_chat_resend_confirm">是否重发此消息？</string>
    <string name="activity_chat_image_not_exist">图片不存在</string>


    <string name="fragment_contact_online">最近在线</string>
    <string name="fragment_contact_search_tint">搜索联系人</string>
    <string name="fragment_contact_none">没有联系人</string>
    <string name="fragment_contact_create_conversation_failed">创建会话失败.</string>

    <string name="fragment_invitation_accept">接受</string>
    <string name="fragment_invitation_ignore">忽略</string>
    <string name="fragment_invitation_none">他人请求与您会话时将会在此显示，您当前没有任何邀请。</string>

    <string name="title_activity_conversation_info">群组信息</string>
    <string name="activity_conversation_info_name_tips">输入群组名称</string>
    <string name="activity_conversation_info_create">创建群组</string>
    <string name="activity_conversation_info_add_member">加人</string>
    <string name="activity_conversation_info_exit">退出群组</string>
    <string name="activity_conversation_info_exit_tips">是否退出该群组？</string>
    <string name="activity_conversation_info_kick_off_tips">确定将%s移出群组？</string>

    <string name="title_activity_conversation_create">选择联系人，创建会话</string>
    <string name="activity_conversation_create_name_hint">请输入群组名称</string>
    <string name="activity_conversation_create_member_none">请选择群组成员</string>

    <string name="title_activity_profile">用户信息</string>

    <!--  人脸识别  -->
    <string name="detect_no_face">未检测到人脸</string>
    <string name="detect_face_in">把脸移入框内</string>
    <string name="detect_zoom_in">手机拿近一点</string>
    <string name="detect_zoom_out">手机拿远一点</string>
    <string name="detect_head_up">建议略微抬头</string>
    <string name="detect_head_down">建议略微低头</string>
    <string name="detect_head_left">建议略微向左转头</string>
    <string name="detect_head_right">建议略微向右转头</string>
    <string name="detect_occ_face">脸部有遮挡</string>
    <string name="detect_low_light">光线再亮些</string>
    <string name="detect_keep">请保持不动</string>
    <string name="detect_standard">请正对手机</string>
    <string name="detect_timeout">检测超时</string>
    <string name="liveness_eye">眨眨眼</string>
    <string name="liveness_eye_left">请眨眨左边眼睛</string>
    <string name="liveness_eye_right">请眨眨右边眼睛</string>
    <string name="liveness_mouth">张张嘴</string>
    <string name="liveness_head_left">向左缓慢转头</string>
    <string name="liveness_head_right">向右缓慢转头</string>
    <string name="liveness_head_left_right">摇摇头</string>
    <string name="liveness_head_up">缓慢抬头</string>
    <string name="liveness_head_down">缓慢低头</string>
    <string name="liveness_good">非常好</string>

</resources>
