<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.me.CheckInActivity">

    <com.amap.api.maps.MapView
        android:id="@+id/iMapView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View style="@style/SplitH" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/spacing_h_2"
        android:layout_marginTop="@dimen/spacing_v_4"
        android:layout_marginEnd="@dimen/spacing_h_2"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/TextTips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/check_in_allow_tips"
            android:textColor="@color/primaryLight" />

        <Button
            android:id="@+id/iCheckInButton"
            style="@style/Button"
            android:layout_marginTop="@dimen/spacing_v_4"
            android:text="@string/title_check_in" />

        <Button
            android:id="@+id/iCheckInRecordButton"
            style="@style/TextButton"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/spacing_v_4"
            android:gravity="center"
            android:text="@string/check_in_record" />

    </LinearLayout>

</LinearLayout>