<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/container"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/bg_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/iLoginView"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView

            android:layout_width="72dp"
            android:layout_height="72dp"
            android:contentDescription="@null"
            android:src="@mipmap/ic_app" />

        <TextView

            style="@style/TextTitle"

            android:layout_marginTop="@dimen/spacing_v_3"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/iLoginView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/spacing_h_3"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="@dimen/spacing_h_3"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/iUserNameEdit"
            style="@style/EditText"
            android:hint="@string/login_username"
            android:inputType="text"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/iPasswordEdit"
            style="@style/EditText"
            android:layout_marginTop="@dimen/spacing_v_3"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            tools:ignore="Autofill" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_v_4">

            <Button
                android:id="@+id/iLoginButton"
                style="@style/Button"
                android:text="@string/login_login" />

            <ProgressBar
                android:id="@+id/iProgress"
                style="@style/StyleProgress"
                android:layout_centerInParent="true"
                android:visibility="gone" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/spacing_v_3"
        android:gravity="center_vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@null"
            android:src="@mipmap/ic_secure" />

        <TextView
            style="@style/TextTips"
            android:layout_marginStart="@dimen/spacing_h_0"
            android:text="@string/login_secure"
            android:textColor="@color/success"
            android:textSize="@dimen/text_size_middle" />

    </LinearLayout>

</RelativeLayout>
